--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -822,6 +822,7 @@
     "ui.options.controls": "Controls",
 
     "ui.options.multiplayer.nameTags": "Show player vehicle nametags",
+    "ui.options.multiplayer.debugOutput": "Show messages in the console",
     "ui.options.multiplayer.launcherPort": "Port that the launcher is running on",
     "ui.options.multiplayer.clearLauncherCache": "Clear the launchers mod cache",
     "ui.options.multiplayer.launcherPort.tooltip": "Set this to the custom port that the launcher was set to use.",
