--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -829,14 +829,15 @@
     "ui.options.multiplayer.showSyncConfigUpdates": "Should the mod automaticlly apply other player vehicle part config changes.",
     "ui.options.multiplayer.nameTags": "Show player nametags",
     "ui.options.multiplayer.nameTagAlternate": "Alternate nametag colors",
-	  "ui.options.multiplayer.nameTagShowDistance": "Show distance from other players",
+	"ui.options.multiplayer.nameTagShowDistance": "Show distance from other players",
     "ui.options.multiplayer.debugOutput": "Show debug messages in the console",
     "ui.options.multiplayer.launcherPort": "Launcher port:[br]Don't change unless you have to",
     "ui.options.multiplayer.launcherPortWarn": "Don't change unless you have to",
     "ui.options.multiplayer.launcherPort.tooltip": "Set this to the custom port that the launcher was set to use.",
     "ui.options.multiplayer.clearLauncherCache": "Clear the launchers mod cache",
     "ui.options.multiplayer.clearLauncherCache.tooltip": "Enabling this will clear the currently download mod cache of the launcher. Doing this will result in you having to download all mods for each server you join again.",
-    "ui.multiplayer.clear": "Clear Launcher Cache",
+    "ui.options.multiplayer.skipOtherPlayersVehicles": "Disable switching to other players vehicles",
+	"ui.multiplayer.clear": "Clear Launcher Cache",
 
     "ui.options.userInterface": "User Interface",
     "ui.options.userInterface.editApps": "Customize UI apps",
