Inverted application of vehicle edits

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -3912,7 +3912,7 @@
 	"ui.options.multiplayer": "Multiplayer",
 
 	"ui.options.multiplayer.syncConfigUpdates": "Apply other player vehicle part updates",
-    "ui.options.multiplayer.showSyncConfigUpdates": "Should the mod automaticlly apply other player vehicle part config changes",
+    "ui.options.multiplayer.showSyncConfigUpdates": "Disable automatic application of other player vehicle part config changes",
     "ui.options.multiplayer.nameTags": "Hide player nametags",
     "ui.options.multiplayer.nameTagAlternate": "Use alternate nametag colors",
 	"ui.options.multiplayer.nameTagShowDistance": "Show distance from other players",
