queue system more customizable, reliable
added option to manually sync instead of relying on the automatic only

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -3914,7 +3914,9 @@
     "ui.options.multiplayer.autoSyncVehicles": "Enable auto part sync",
     "ui.options.multiplayer.autoSyncVehicles.tooltip": "If enabled, your vehicle parts will automatically be synced to other players after a few seconds",
     "ui.options.multiplayer.queueSpawnEdit": "Queue player updates",
-    "ui.options.multiplayer.queueSpawnEdit.tooltip": "If enabled, you will only spawn vehicles once slowed down, as to not affect gameplay",
+    "ui.options.multiplayer.queueSpawnEdit.tooltip": "If enabled, remote vehicle spawns and edits will be put in a queue, instead of applying instantly",
+    "ui.options.multiplayer.queueAuto": "Automatic queue system",
+    "ui.options.multiplayer.queueAuto.tooltip": "If enabled, you will only spawn queued vehicles once you come to a stop",
     "ui.options.multiplayer.luaOptimisations": "Enable optimisations",
     "ui.options.multiplayer.luaOptimisations.tooltip": "If enabled, other vehicles will run limited calculations",
     "ui.options.multiplayer.nameTags": "Hide player nametags",
