--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1165,6 +1165,7 @@
     "ui.options.gameplay.multiseat": "Use multiseat for this session",
     "ui.options.gameplay.switchHint": "Use the [action=switch_next_vehicle_multiseat]'Switch to next vehicle (multiseat)' binding to switch vehicles",
     "ui.options.gameplay.multiseatTags": "Display multiseat player tags",
+    "ui.options.gameplay.enableSmartRecovery": "Enable the smart recovery system",
     "ui.options.gameplay.controlOnBlur": "Allow controller input and force feedback when window focus is lost",
     "ui.options.gameplay.enginesPreheated": "Start vehicle engines preheated",
     "ui.options.gameplay.enginesPreheated.tooltip": "If disabled, the engine thermal simulation starts at the environmental temperature.",
@@ -3901,7 +3902,7 @@
     "ui.campaign.localPlayers": "local players",
     "ui.campaign.requiresOneController": "Requires one controller per player",
 
-    "December": "Decemberrrr",
+    "December": "December",
     "general.time_format": "dd MM yyyy",
 
     "ui.loadingScreen.tips": "TIPS",
@@ -3910,10 +3911,16 @@
     "ui.playmodes.multiplayer": "Multiplayer",
 	"ui.options.multiplayer": "Multiplayer",
 
-	"ui.options.multiplayer.syncConfigUpdates": "Apply other player vehicle part updates",
-    "ui.options.multiplayer.showSyncConfigUpdates": "Should the mod automaticlly apply other player vehicle part config changes",
-    "ui.options.multiplayer.nameTags": "Show player nametags",
-    "ui.options.multiplayer.nameTagAlternate": "Alternate nametag colors",
+    "ui.options.multiplayer.autoSyncVehicles": "Enable auto part sync",
+    "ui.options.multiplayer.autoSyncVehicles.tooltip": "If enabled, your vehicle parts will automatically be synced to other players after a few seconds",
+    "ui.options.multiplayer.queueSpawnEdit": "Queue player updates",
+    "ui.options.multiplayer.queueSpawnEdit.tooltip": "If enabled, remote vehicle spawns and edits will be put in a queue, instead of applying instantly",
+    "ui.options.multiplayer.queueAuto": "Automatic queue system",
+    "ui.options.multiplayer.queueAuto.tooltip": "If enabled, you will only spawn queued vehicles once you come to a stop",
+    "ui.options.multiplayer.luaOptimisations": "Enable optimisations",
+    "ui.options.multiplayer.luaOptimisations.tooltip": "If enabled, other vehicles will run limited calculations",
+    "ui.options.multiplayer.nameTags": "Hide player nametags",
+    "ui.options.multiplayer.nameTagAlternate": "Use alternate nametag colors",
 	"ui.options.multiplayer.nameTagShowDistance": "Show distance from other players",
     "ui.options.multiplayer.debugOutput": "Show debug messages in the console",
     "ui.options.multiplayer.launcherPort": "Launcher port:[br]Don't change unless you have to",
@@ -3930,6 +3937,7 @@
 	"ui.multiplayer.connecting": "Connecting",
 	"ui.multiplayer.loading": "Loading...",
 	"ui.multiplayer.servers": "Servers",
+	"ui.multiplayer.recent": "Recent",
 	"ui.multiplayer.favorites": "Favorites",
 	"ui.multiplayer.direct_connect": "Direct connect",
 	"ui.multiplayer.refresh": "Refresh",
@@ -3951,5 +3959,14 @@
 	"ui.multiplayer.modSlider": "Mod size limiter",
 	"ui.multiplayer.modSliderTooltip": "Enable mod size limiter",
 
+	"ui.multiplayertos.title": "Rules and terms of service",
+	"ui.multiplayertos.tos": "Terms of service",
+	"ui.multiplayertos.rules": "Rules",
+    "ui.multiplayertos.tos.description1": "Full terms of services can be found ",
+    "ui.multiplayertos.tos.description2": "In order to play BeamMP you will have to read and accept the terms of service.",
+	"ui.multiplayertos.rules.description1": "Our rules can be found ",
+	"ui.multiplayertos.rules.description2": "In order to play BeamMP you will have to accept all the game only rules.",
+	"ui.multiplayertos.info1": "For more information, be sure to check our ",
+	"ui.multiplayertos.info2": "You can also find more information on our ",
     "ui.common.sync": "Sync"
 }
