--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -4134,6 +4134,8 @@
     "ui.options.multiplayer.queueAuto.tooltip": "If enabled, you will only spawn queued vehicles once you come to a stop",
     "ui.options.multiplayer.queueAutoSkipRemote": "Don't queue if spectating others",
     "ui.options.multiplayer.queueAutoSkipRemote.tooltip": "If enabled and spectating other players, you will spawn queued vehicles right away",
+    "ui.options.multiplayer.queueSkipUnicycle": "Don't queue player models (snowmen)",
+    "ui.options.multiplayer.queueSkipUnicycle.tooltip": "If enabled, you will spawn other player models right away",
     "ui.options.multiplayer.luaOptimisations": "Enable optimisations",
     "ui.options.multiplayer.luaOptimisations.tooltip": "If enabled, other vehicles will run limited calculations",
     "ui.options.multiplayer.nameTags": "Hide player nametags",
