Tweaked some code, Fixed some typos and added some more fixes
Made pausing an experimental option because if a vehicle had two rapid instabilities it could break VE when the car was reloaded (like a part change etc)

Fix for queue system trying to apply non existent color change

fix by deerboi for queue spamming console and glitching the camera

fixed hazard being constantly enabled and disabled on every tick causing an annoying ticking noise

Added a check if Vehicle rotation are valid before sending them, fixes another desync

Fix for cars shutting off on spawn and during edits

Removed starter and ignition from onExtensionLoaded since they didn't seem to do anything after the fix for above, Let me know if there was a reason for them that i just didn't notice

Fixed typos

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -4357,6 +4357,8 @@
 	"ui.options.multiplayer.skipOtherPlayersVehicles": "Disable switching to other players vehicles",
 	"ui.options.multiplayer.alternateModloading": "Alternate mod loading",
 	"ui.options.multiplayer.alternateModloading.tooltip": "This method allows you to unfocus the BeamNG window whilst loading mods, but it can not guarantee loading unstable mods.",
+	"ui.options.multiplayer.disableInstabilityPausing": "Disable pausing caused by instabilities",
+	"ui.options.multiplayer.disableInstabilityPausing.tooltip": "This will make gameplay smoother but can cause sync issues after several instabilities",
     "ui.multiplayer.clear": "Clear Launcher Cache",
 
 	"ui.options.multiplayer.nameTagTitle": "Nametags",
